crates/swc_ecma_parser/tests/test262-error-references/fail/938db8c9f82c8cb5.module.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/938db8c9f82c8cb5.module.js:1:1
  |
1 | 01
  | ^^

